@@ -1,6 +1,7 @@
 python-easysnmp (1.0) stable; urgency=medium
 
   * Implemented bulk walk for up to 30X faster walk
+  * Matching bulkwalk and walk code
   * Added/changed logging code in interface.c for easier debug
 
  -- Norman Ovenseri <norman@uber.com>  Sun, 24 Jan 2016 18:25:00 -0800
